--- a/main.html
+++ b/main.html
@@ -10,8 +10,14 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<img src="https://storage.googleapis.com/acciojob-open-file-collections/pricing-card.png"
-		alt = "AccioCard" >
+	<div class = "card">
+		<img src = "https://storage.googleapis.com/acciojob-open-file-collections/pricing-card.png"
+			alt = "hai">
+		<h1><b>Pricing Card</b></h1>
+		<h3>Price: Rs.200</h3>
+		<p>Description: Lorem ipsum dolor sit amet,consectetur adipiscing elit.</h3><br>
+		<button> Buy Now</button>
+	
 
 </body>
 
